--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 .customjumbo {
-	background-color: #C1D6FF;
+	background-color: #E0EBFF;
 }
 
 
 
 .newnavbar {
-	background-color: #EAF5FF;
+	background-color: #FFFFFF;
 }
