WHITE TEXT ADDED!

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .customjumbo {
-	background-color: #F0FFFA;
+	background-color: #003507;
 }
 
 
@@ -8,6 +8,4 @@
 	background-color: #FFFFFF;
 }
 
-.feature-img {
-	min-width: 100%; 
-}
+
