--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 .customjumbo {
 
-	background-color: #003507;
-
-
+	background-color: #254117;
 
 }
-
-
 
 .newnavbar {
 	background-color: #FFFFFF;
 }
 
 
+.newbut {
+	background-color: #FFCE88;
+	color: #FFFFFF ;
+}
