--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
 }
 
 .newnavbar {
-	background-color: #FFFFFF;
+	background-color: #EBDDE2;
 }
 
 
 .newbut {
-	background-color: #FFCE88;
+	background-color: #EBDDE2;
 	color: #FFFFFF ;
 }
