--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 .customjumbo {
 
-	background-color: #254117;
+	background-color: #7B7C66;
 
 }
 
 .newnavbar {
-	background-color: #EDC9AF;
+	background-color: #C3BBB8;
 }
 
 
 .newbut {
-	background-color: #EDC9AF;
+	background-color: #C3BBB8;
 	color: #FFFFFF ;
 }
 .newer{
@@ -22,3 +22,10 @@ font-family: 'Raleway:50';
 font-size: 12px;
 }
 
+.newcontainer {
+		min-width: 781px;
+        max-width: 992px;
+        margin-right: 50px;
+        margin-left: 50px;
+    
+}
