--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 .customjumbo {
 
-	background-color: #2f4f4f;
+	
+	background-image: url('../img/floeme.png'); 
+	
 
 }
 
@@ -27,5 +29,6 @@ font-size: 12px;
         max-width: 992px;
         margin-right: 50px;
         margin-left: 50px;
+        background-image: url('../img/floeme.png');
     
 }
